scss/custom.scss
$niagara-green: rgba(42, 187, 155, 1);
$cascade-grey: rgba(149, 165, 166, 1);
$curious-blue: rgba(30, 139, 195, 1);
$ebony-clay: rgba(34, 49, 63, 1);
$jaffa-orange: rgba(235, 151, 78, 1);
$sunset-orange: rgba(246, 71, 71, 1);

$top-bar-border: rgba(248, 248, 248, 1);

$max-width: 100%;
$max-height: 100%;

*:focus {
  outline: none;
}

html {

}
body {
  background: darken($curious-blue, 10%);
  color: white;
  font-family: 'Lato', sans-serif;
  -webkit-tap-highlight-color:rgba(0,0,0,0);
}
.main-container {
  background: $niagara-green;
  border-radius: 0px;
  max-width: $max-width;
  margin:0 auto;
}

.title-bar {
  background: $niagara-green;
  color: white;
  font-family: 'Kalam', cursive;
  font-size:1em;
  text-align: center;
}

.bill-container{
  background: $niagara-green;
  border-bottom: 2px solid darken($niagara-green, 10%);
  font-size: 1.5em;
  padding:10px;
  .header{
    display: inline-block;
  }
  .cur-bill{
    display: inline-block;
    float: right;
    font-weight: bold;
  }
}

.tip-container{
  &:after {
    content: "";
    display: table;
    clear: both;
  }
  background: $niagara-green;
  font-size: 1.5em;
  padding: 10px;
  .header{
    display: inline-block;
    float: left;
    width: 33.33%;
  }
  .cur-tip{
    display: inline-block;
    float: right;
    font-weight: bold;
    text-align: right;
  }
}

.tip-slider-container {
  background: $niagara-green;
  border-bottom: 2px solid darken($niagara-green, 10%);
  padding: 0 10px 10px 10px;
  .tip-slider {
    &::-webkit-slider-thumb {
      -webkit-appearance: none;
      border-radius: 50%;
      border:2px solid $top-bar-border;
      background: $sunset-orange;
      height: 20px;
      outline:none;
      width: 20px;
    }
    &::-webkit-slider-thumb:active {
      transform: scale(1.4);
    }
    -webkit-appearance: none;
    background: white;
    display: inline-block;
    height: 6px;
    -webkit-transform: translate3d(0px,0px,0px);
    width: 100%;
  }
}

.total-container{
  background: $curious-blue;
  border-bottom: 0px solid $top-bar-border;
  font-size: 1.5em;
  padding: 10px;
  .header{
    display: inline-block;
  }
  .cur-total{
    display: inline-block;
    float: right;
    font-weight: bold;
  }
}
.num-btns-container {
  margin-top:2px;
  width:100%;
  .row-btns {
    &:after {
      content: "";
      display: table;
      clear: both;
    }
    padding-left:0px;
    text-align: center;
    .num-btn {
      &:active {
        background: $sunset-orange;
        color: white;
        transform: scale(1.1);
        transition: 0.2s ease-in;
      }
      // &:active {
      //   background: white;
      //   color: $ebony-clay;
      // }
      background: rgba(255,255,255,1);
      border: 2px solid darken($curious-blue, 10%);
      border-right-width:1px;
      border-left-width:1px;
      color: $ebony-clay;
      cursor: pointer;
      display: inline-block;
      font-size: 1.4em;
      height: 87px;
      margin:0px 0px 0px 0;
      outline: none;
      text-align: center;
      width: 102px;
      -webkit-tap-highlight-color: white;
    }
  }
}

@media (max-height: 480px) {
  .num-btns-container {
    .row-btns {
      .num-btn {
        height:65px;
        width:102px;
      }
    }
  }
}
// ionic customizations

.pane {
  background: darken($curious-blue, 10%);
}
.bar {
  border-bottom: none;
}
.bar.bar-stable {
  border-color: transparent;
}

